@@ -7,6 +7,7 @@ Changelog
  * Use minified versions of jQuery and jQuery UI in the admin. Total savings without compression 371 KB (Tom Dyson)
  * Hooks can now specify the order in which they are run (Gagaro)
  * Added a `submit_buttons` block to login template (Gagaro)
+ * Added `construct_image_chooser_queryset`, `construct_document_chooser_queryset` and `construct_page_chooser_queryset` hooks (Gagaro)
  * The homepage created in the project template is now titled "Home" rather than "Homepage" (Karl Hobley)
  * Signal receivers for custom `Image` and `Rendition` models are connected automatically (Mike Dingjan)
  * Fix: Marked 'Date from' / 'Date to' strings in wagtailforms for translation (Vorlif)
